# file-transfer-system

./: .gitignore  README.md
source/: CMakeLists.txt  FileTransferSystem.sln  FileTransferSystemBinary.vcxproj  FileTransferSystemBinary.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
